--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,41 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: var(--background);
   min-height: 100vh;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: large;
   color: white;
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.filter--input{
+  border: 0.2rem solid var(--white);
+  background-color: var(--grey);
+  box-shadow:  1px 1px 3px 0 rgba(0, 0, 0, 0.1);
+  color: var(--black);
+  border-radius: 1em;
+  height: 3em;
+  width: 20%;
+  margin: 0.5em;
+  padding: 0 1em;
+  font-size: 1em;
+  line-height: 1.5;
+  transition: border .2s;
+}
+.filter--input::placeholder{
+  font-size: medium
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card--display{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  place-items: center;
+  gap: 20px;
 }
+
+
