--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--white);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root{
+
+  --background: #3c34e8;
+  --white: #fefefe;
+  --black: #1c1d42;
+  --grey: #f2f4f7;
+  --accentGreen: #43c6c9;
+  --accentPurple: #857cbc;
+  --accentPink: #e4d2eb;
 }
